@@ -1,4 +1,4 @@
-from datetime import datetime
+from datetime import datetime, timedelta
 
 from seantis.reservation import utils
 from seantis.reservation.tests import IntegrationTestCase
@@ -66,5 +66,49 @@ class UtilsTestCase(IntegrationTestCase):
             (
                 datetime(2012, 1, 2, 0, 0),
                 datetime(2012, 1, 3, 23, 59, 59, 999999)
+            )
+        )
+
+    def test_whole_day(self):
+        self.assertTrue(
+            utils.whole_day(
+                datetime(2012, 1, 1),
+                datetime(2012, 1, 2)
+            )
+        )
+        self.assertFalse(
+            utils.whole_day(
+                datetime(2012, 1, 1),
+                datetime(2012, 1, 1)
+            )
+        )
+        self.assertTrue(
+            utils.whole_day(
+                datetime(2012, 1, 1),
+                datetime(2012, 1, 2) - timedelta(seconds=1)
+            )
+        )
+        self.assertFalse(
+            utils.whole_day(
+                datetime(2012, 1, 1),
+                datetime(2012, 1, 2) - timedelta(seconds=2)
+            )
+        )
+        self.assertTrue(
+            utils.whole_day(
+                datetime(2012, 1, 1),
+                datetime(2012, 1, 3)
+            )
+        )
+        self.assertTrue(
+            utils.whole_day(
+                datetime(2012, 1, 1),
+                datetime(2012, 1, 3) - timedelta(seconds=1)
+            )
+        )
+        self.assertFalse(
+            utils.whole_day(
+                datetime(2012, 1, 1),
+                datetime(2012, 1, 3) - timedelta(seconds=2)
             )
         )
